@@ -23,6 +23,7 @@ Changes in 0.14.11:
   * repository .cnr file's commitAction configuration item now has a
     flavor provided to it as %(flavor)s and the default changemail
     script uses it.
+  * don't allow the same label to appear twice in sequence in a version
 
 Changes in 0.14.10:
   * FlavorMap sense wasn't set right for base instruction set
